# OpenSptr

./: .gitignore  CMakeLists.txt  README.md  byteutils.cpp  byteutils.h  filesystem.cpp  filesystem.h  log.h  main.cpp  settings.h
shell/: command.h  shell.h
sound/: audioId.h  bank.cpp  bank.h  bnk.cpp  bnk.h  pcm.cpp  pcm.h  sdat.cpp  sdat.h  sequencer.cpp  sequencer.h  sound.cpp  sound.h  sseq.cpp  sseq.h  stream.cpp  stream.h  strm.cpp  strm.h  swar.cpp  swar.h  swav.cpp  swav.h  types.h
